# mattermost-mcp

./: .gitignore  README.md  pyproject.toml
src/mattermost_mcp/: __main__.py  server.py
